# Kaggle-Solution-Finder-Agent

./: README.md
app/: app.py  ingest.py  ingest_test.py  logs.py  main.py  pyproject.toml  requirements.txt  search_agent.py  search_tools.py
app/Kaggle_Finder_Solutio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/logs/: Query_Agent_20260118_163142_617021.json  Query_Agent_20260118_163523_04236c.json  Query_Agent_20260118_165153_2a6200.json  Query_Agent_20260118_170231_cefdf4.json  Query_Agent_20260118_172056_c48ef1.json  Query_Agent_20260118_173059_72b059.json  Query_Agent_20260118_173833_c2f077.json  Query_Agent_20260118_173955_ee77c2.json
eval/: data_gen.ipynb  evaluations.ipynb
eval/logs/: Query_Agent_20260119_184549_77dd42.json  Query_Agent_20260119_184608_6f9f4f.json  Query_Agent_20260119_184619_3b57c1.json  Query_Agent_20260119_184634_067ad4.json  Query_Agent_20260119_184640_d5f22d.json  Query_Agent_20260119_184648_03f526.json  Query_Agent_20260119_184656_3818f4.json  Query_Agent_20260119_184707_14541c.json  Query_Agent_20260119_184737_b70d62.json  Query_Agent_20260119_184812_4e75cc.json  Query_Agent_20260119_184827_d39ca0.json  Query_Agent_20260119_184843_46c73b.json  Query_Agent_20260119_184847_1cad2e.json  Query_Agent_20260119_184851_504c6a.json  Query_Agent_20260119_184854_fdea79.json  Query_Agent_20260119_184858_171774.json  Query_Agent_20260119_184901_f9c973.json  Query_Agent_20260119_184905_7a2bbb.json  Query_Agent_20260119_184909_2968c4.json  Query_Agent_20260119_184914_2500ba.json  Query_Agent_20260119_184916_79eedf.json  (+96 more)
