[project]
name = "Kaggle_Finder_Solutio"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "minsearch>=0.0.5",
    "openai>=1.108.2",
    "pydantic-ai==1.0.9",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
]
